fix img overflow

--- a/css/main.css
+++ b/css/main.css
@@ -139,6 +139,10 @@ blockquote p {
   border: 0;
 }
 
+p img {
+  width: 100%;
+}
+
 /*****************************************************************************/
 /*
 /* Posts
